# Forge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  netlify.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_slice.md
.github/workflows/: ci.yml  production-smoke.yml
apps/api/: Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260630_0001_identity_foundation.py  20260715_0002_customers.py
apps/api/app/: main.py  worker.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: auth.py  customers.py  health.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  audit.py  company.py  customer.py  enums.py  membership.py  session.py  user.py
apps/api/app/schemas/: auth.py  customer.py  principal.py
apps/api/app/services/: auth.py
apps/api/tests/: test_health.py  test_security.py
apps/web/: .env.example  Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/(dashboard)/dashboard/: page.tsx
apps/web/app/(dashboard)/dashboard/customers/: page.tsx
apps/web/app/api/auth/login/: route.ts
apps/web/app/api/customers/: route.ts
apps/web/components/: app-shell.tsx  logo.tsx
apps/web/lib/: auth.ts
docs/: architecture.md  deployment.md  roadmap.md  security.md  workflows.md
(+5 files in other folders)
