[project]
name = "forge-api"
version = "0.1.0"
description = "Forge home services operating system API"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "celery[redis]>=5.4,<6",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.5,<3",
  "pwdlib[argon2]>=0.2,<1",
  "pyjwt>=2.9,<3",
  "python-multipart>=0.0.12,<1",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.7,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"] # FastAPI dependency injection uses callable defaults by design.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
